Assignment–1-Employee-List-component, restructuring

--- a/Edureka/EmployeeList/src/app/app.component.html
+++ b/Edureka/EmployeeList/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="container lowered">
     <div class="centered">
-        <div class="panel panel-primary draggable-panel toolbar-panel ui-draggable ui-resizable" id="toolbox-tools">
+        <div
+            class="panel panel-primary draggable-panel toolbar-panel ui-draggable ui-resizable"
+            id="toolbox-tools"
+            >
             <div class="panel-heading lang-panel-header-tools">
                 <img
                     width="40"
@@ -13,8 +16,7 @@
                 <i class="fa pull-right fa-chevron-down" id="toggle-toolbox-tools"></i>
             </div>
             <div class="panel-body">
-                <employee-list>
-                </employee-list>
+                <employee-list> </employee-list>
             </div>
             <div class="panel-footer bottom">Panel footer</div>
         </div>
