--- a/Edureka/Directives-Pipes/src/app/components/employee-list/employee-list.component.css
+++ b/Edureka/Directives-Pipes/src/app/components/employee-list/employee-list.component.css
@@ -2,15 +2,15 @@ table {
     overflow: hidden;
 }
 
-tr:hover {
+/*tr:hover {
     background-color: #ffa;
-}
+}*/
 
 td,
 th {
     position: relative;
 }
-td:hover::after,
+/*td:hover::after,
 th:hover::after {
     content: "";
     position: absolute;
@@ -20,8 +20,8 @@ th:hover::after {
     height: 10000px;
     width: 100%;
     z-index: -1;
-}
-td:focus::after,
+}*/
+/*td:focus::after,
 th:focus::after {
     content: "";
     background-color: lightblue;
@@ -31,12 +31,12 @@ th:focus::after {
     top: -5000px;
     width: 100%;
     z-index: -1;
-}
+}*/
 .selected {
     background-color: beige;
 }
 
-td:focus::before {
+/*td:focus::before {
     background-color: lightblue;
     content: "";
     height: 100%;
@@ -45,7 +45,7 @@ td:focus::before {
     position: absolute;
     width: 10000px;
     z-index: -1;
-}
+}*/
 td input {
     width: 100%;
 }
