--- a/Edureka/Directives-Pipes/src/app/components/employee-list/employee-list.component.html
+++ b/Edureka/Directives-Pipes/src/app/components/employee-list/employee-list.component.html
@@ -1,72 +1,74 @@
 <div class="panel rounded">
-    <table id="employeeList">
-        <thead>
-            <tr>
-                <td style="width:{{ column[0] }}%">
-                    <label>Employee ID</label>
-                </td>
-                <td style="width:{{ column[1] }}%">
-                    <label>First Name</label>
-                </td>
-                <td style="width:{{ column[2] }}%">
-                    <label>Last Name</label>
-                </td>
-                <td style="width:{{ column[3] }}%">
-                    <label>Dept</label>
-                </td>
-                <td style="width:{{ column[4] }}%">
-                    <label>City</label>
-                </td>
-                <td style="width:{{ column[5] }}%">
-                    <label>Email</label>
-                </td>
-            </tr>
-        </thead>
-        <tbody *ngFor="let employee of employees">
-            <tr
-                (click)="editEmp(employee.id)"
-                [class.selected]="employee.id === selectedEmployee.id"
-                >
-                <td>
-                    <label>{{ employee.id }}</label>
-                </td>
-                <td>
-                    <label>{{ employee.firstName }}</label>
-                </td>
-                <td>
-                    <label>{{ employee.lastName }}</label>
-                </td>
-                <td>
-                    <label>{{ employee.dept }}</label>
-                </td>
-                <td>
-                    <label>{{ employee.city }}</label>
-                </td>
-                <td>
-                    <label>{{ employee.email }}</label>
-                </td>
-            </tr>
-            <tr *ngIf="employee.id == selectedEmployee.id">
-                <td>
-                    <input class="half" disabled value="{{ selectedEmployee.id }}" />
-                    <button (click)="updateEmp()">Update</button>
-                </td>
-                <td>
-                    <input id="firstname" [(ngModel)]="selectedEmployee.firstName" />
-                </td>
-                <td>
-                    <input id="lastName" [(ngModel)]="selectedEmployee.lastName" />
-                </td>
-                <td>
-                    <input id="dept" [(ngModel)]="selectedEmployee.dept" />
-                </td>
-                <td>
-                    <input id="city" [(ngModel)]="selectedEmployee.city" />
-                </td>
-                <td>
-                    <input id="email" [(ngModel)]="selectedEmployee.email" />
-                </td>
-            </tr>
-        </tbody>
-    </table>
+  <label style="color: red"
+    >Salary field is currency pipe chained with uppercase pipe instead of DOB
+    field !!!</label
+  >
+  <table id="employeeList">
+    <thead>
+      <tr>
+        <td *ngFor="let header of headers" style="width:{{ header.width }}%">
+          <label>{{ header.text }}</label>
+        </td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        *ngFor="let employee of employees"
+        colorDirective
+        (click)="editEmp(employee.id)"
+        [class.selected]="employee.id === selectedEmployee.id"
+      >
+        <td>
+          <label>{{ employee.id }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <button (click)="updateEmp()">Update</button>
+            <button (click)="cancelUpdate()">Cancel</button>
+          </div>
+        </td>
+        <td>
+          <label>{{ employee.dob | date: "MM-dd-YYYY" }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <button (click)="updateEmp()">Update</button>
+            <button (click)="cancelUpdate()">Cancel</button>
+          </div>
+        </td>
+        <td>
+          <label>{{ employee.firstName }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <input id="firstname" [(ngModel)]="selectedEmployee.firstName" />
+          </div>
+        </td>
+        <td>
+          <label>{{ employee.lastName }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <input id="lastName" [(ngModel)]="selectedEmployee.lastName" />
+          </div>
+        </td>
+        <td>
+          <label>{{ employee.salary | currency: "sek " | uppercase }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <input id="dept" [(ngModel)]="selectedEmployee.dept" />
+          </div>
+        </td>
+        <td>
+          <label>{{ employee.dept }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <input id="dept" [(ngModel)]="selectedEmployee.dept" />
+          </div>
+        </td>
+        <td>
+          <label>{{ employee.city }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <input id="city" [(ngModel)]="selectedEmployee.city" />
+          </div>
+        </td>
+        <td>
+          <label>{{ employee.email }}</label>
+          <div *ngIf="employee.id == selectedEmployee.id">
+            <input id="email" [(ngModel)]="selectedEmployee.email" />
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
