Module4-Assignment–1-Services-Injection employee-service added

--- a/Edureka/Services-Injection/src/app/app.component.html
+++ b/Edureka/Services-Injection/src/app/app.component.html
@@ -1,25 +1,28 @@
 <div class="container lowered">
-    <div class="centered">
-        <div
-            class="panel panel-primary draggable-panel toolbar-panel ui-draggable ui-resizable"
-            id="toolbox-tools"
-            >
-            <div class="panel-heading lang-panel-header-tools">
-                <img
-                    width="40"
-                    alt="Angular Logo"
-                    src="../assets/images/AngularLogo.svg"
-                    />
-                <span>{{ title }}</span>
-                <i class="fa fa-times pull-right close-panel" id="close-toolbox-tools">
-                </i>
-                <i class="fa pull-right fa-chevron-down" id="toggle-toolbox-tools"></i>
-            </div>
-            <div class="panel-body">
-                <employee-list> </employee-list>
-            </div>
-            <div class="panel-footer bottom">Panel footer</div>
-        </div>
+  <div class="centered">
+    <div
+      class="panel panel-primary draggable-panel toolbar-panel ui-draggable ui-resizable"
+      id="toolbox-tools"
+    >
+      <div class="panel-heading lang-panel-header-tools">
+        <img
+          width="40"
+          alt="Angular Logo"
+          src="../assets/images/AngularLogo.svg"
+        />
+        <span>{{ title }}</span>
+        <i class="fa fa-times pull-right close-panel" id="close-toolbox-tools">
+        </i>
+        <i class="fa pull-right fa-chevron-down" id="toggle-toolbox-tools"></i>
+      </div>
+      <div class="panel-body">
+        <newemployee> </newemployee>
+      </div>
+      <div class="panel-body">
+        <employee-list> </employee-list>
+      </div>
+      <div class="panel-footer bottom">Panel footer</div>
     </div>
+  </div>
 </div>
 <router-outlet> </router-outlet>
