--- a/Edureka/Services-Injection/src/app/components/employee-list/employee-list.component.css
+++ b/Edureka/Services-Injection/src/app/components/employee-list/employee-list.component.css
@@ -1,54 +1,24 @@
 table {
-    overflow: hidden;
+  overflow: hidden;
 }
-
-/*tr:hover {
-    background-color: #ffa;
-}*/
 
 td,
 th {
-    position: relative;
+  position: relative;
 }
-/*td:hover::after,
-th:hover::after {
-    content: "";
-    position: absolute;
-    background-color: #ffa;
-    left: 0;
-    top: -5000px;
-    height: 10000px;
-    width: 100%;
-    z-index: -1;
-}*/
-/*td:focus::after,
-th:focus::after {
-    content: "";
-    background-color: lightblue;
-    position: absolute;
-    left: 0;
-    height: 10000px;
-    top: -5000px;
-    width: 100%;
-    z-index: -1;
-}*/
 .selected {
-    background-color: beige;
+  background-color: beige;
+}
+td input {
+  width: 100%;
 }
 
-/*td:focus::before {
-    background-color: lightblue;
-    content: "";
-    height: 100%;
-    top: 0;
-    left: -5000px;
-    position: absolute;
-    width: 10000px;
-    z-index: -1;
-}*/
-td input {
-    width: 100%;
+button {
+  /* margin-bottom: 10px; */
 }
-.half {
-    width: 50% !important;
+label {
+  padding: 10px;
+  /* display: inline-block;
+  width: 150px;
+  text-align: right; */
 }
