Code cleanup, implementing Clean Code

--- a/Edureka/Services-HttpClient/src/app/app.component.css
+++ b/Edureka/Services-HttpClient/src/app/app.component.css
@@ -267,6 +267,10 @@ svg#clouds {
   z-index: -10;
   width: 1920px;
 }
+td > label {
+  width: 50px !important;
+  max-width: 100px;
+}
 
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
