--- a/Edureka/Services-HttpClient/src/app/components/fake-employees-list/fake-employees-list.component.html
+++ b/Edureka/Services-HttpClient/src/app/components/fake-employees-list/fake-employees-list.component.html
@@ -12,7 +12,7 @@
         id="row-{{ employee.id }}"
         *ngFor="let employee of employees"
         [class.selected]="employee.id === selectedEmployee.id"
-        colorDirective
+        rowDirective
       >
         <td>
           <div *ngIf="employee.id !== selectedEmployee.id" style="width: 100%">
