--- a/Edureka/Services-HttpClient/src/styles.css
+++ b/Edureka/Services-HttpClient/src/styles.css
@@ -1,25 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 .center {
-    position:relative;float:none; margin-left: auto; margin-right:auto;
+  position: relative;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 html {
-    font-size: 14px;
+  font-size: 14px;
 }
 @media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
+  html {
+    font-size: 16px;
+  }
 }
 
 .container {
-    max-width: 960px;
+  max-width: 1200px;
 }
 
 .pricing-header {
-    max-width: 700px;
+  max-width: 700px;
 }
 
 .card-deck .card {
-    min-width: 220px;
+  min-width: 220px;
 }
