--- a/Edureka/Routing-Navigation/src/styles.css
+++ b/Edureka/Routing-Navigation/src/styles.css
@@ -5,6 +5,37 @@
   margin-left: auto;
   margin-right: auto;
 }
+/* panel rounded width50p center dialog */
+.dialog {
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 50%;
+  padding: 10px;
+  background-color: #fff;
+
+  border-width: 10px;
+  border-style: groove;
+  border-color: lightyellow;
+  border-radius: 10px;
+  box-shadow: 10px 5px grey;
+}
+
+.dialog > ul > li {
+  width: 100%;
+}
+
+.content {
+  position: relative;
+  float: left;
+
+  width: 100%;
+  background-color: #fff;
+}
+.dialog:hover {
+  border-color: yellow;
+}
 
 html {
   font-size: 14px;
@@ -13,6 +44,18 @@ html {
   html {
     font-size: 16px;
   }
+}
+
+.mainwidow {
+  float: right;
+  height: 800px;
+  width: 100%;
+  padding: 3px;
+}
+.mainwidow > div {
+  height: 799px;
+  overflow: auto;
+  background: #fff;
 }
 
 .container {
@@ -26,14 +69,38 @@ html {
 .card-deck .card {
   min-width: 220px;
 }
+.centeredText {
+  text-align: center;
+}
 
 button {
   min-width: 50px;
+}
+.error {
+  background-color: beige;
+  color: lightcoral;
 }
 
 label {
   padding: 10px;
 }
+
+.linkLookAlike {
+  color: #337ab7;
+}
+
+.linkLookAlike:hover {
+  color: darkblue;
+  text-decoration: underline;
+}
+
+.listButton {
+  margin: 2px;
+  border-style: double;
+  border-color: #dddddd;
+  border-radius: 10px;
+}
+
 nav > ul {
   list-style-type: none;
   margin: 0;
@@ -45,21 +112,45 @@ nav > ul > li {
   float: left;
 }
 
-nav > ul > li a {
+nav > ul > li {
   display: block;
-  padding: 8px;
   margin: 2px;
   background-color: #dddddd;
   border-style: outset;
   border-radius: 10px;
 }
 
-nav > ul > li a:hover {
+nav > ul > li:hover {
   background-color: lightgoldenrodyellow;
   border-style: outset;
 }
 
-nav > ul > li a:active {
+nav > ul > li:active {
   background-color: orange;
   border-style: inset;
+}
+nav > ul > li.active {
+  background-color: lightgoldenrodyellow;
+  border-style: inset;
+}
+
+nav > ul > li > a {
+  width: 160px;
+  text-align: center;
+  display: block;
+  padding: 8px;
+  border-style: outset;
+  border-radius: 10px;
+}
+
+.selected {
+  background-color: beige;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+.width50p {
+  width: 50%;
 }
