--- a/Edureka/Forms/src/app/components/in-class/home/user-details/user-details.component.html
+++ b/Edureka/Forms/src/app/components/in-class/home/user-details/user-details.component.html
@@ -36,6 +36,6 @@
   </table>
 </div>
 
-<p class="linkLookAlike" (click)="selectMe()">
+<p class="linkLookAlike" (click)="goBack()">
   But it's not much here, (click) lets go home!
 </p>
