--- a/Edureka/Forms/src/app/components/6-forms/reactive-forms/reactive-forms.component.html
+++ b/Edureka/Forms/src/app/components/6-forms/reactive-forms/reactive-forms.component.html
@@ -3,91 +3,101 @@
     <h5 class="card-header">Angular 8 Reactive Form Validation</h5>
     <div class="card-body">
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <div class="form-row">
-          <div class="form-group col">
-            <label>Title</label>
-            <select
-              formControlName="title"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.title.errors }"
-            >
-              <option value=""></option>
-              <option value="Mr">Mr</option>
-              <option value="Mrs">Mrs</option>
-              <option value="Miss">Miss</option>
-              <option value="Ms">Ms</option>
-            </select>
-          </div>
-          <div class="form-group col-5">
-            <label>First Name</label>
-            <input
-              type="text"
-              formControlName="firstName"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"
-            />
-          </div>
-          <div class="form-group col-5">
-            <label>Last Name</label>
-            <input
-              type="text"
-              formControlName="lastName"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"
-            />
+        <div class="bordered" name="personal" formGroupName="personal">
+          <label>Username</label>
+          <input
+            type="text"
+            name="userName"
+            formControlName="userName"
+            class="form-control"
+          />
+          <label>Full Name</label>
+          <input type="text" formControlName="fullName" class="form-control" />
+          <div class="error" *ngIf="!isValid('personal.fullName')">
+            Name must be at least 4 characters long.
           </div>
         </div>
-        <div class="form-group">
+        <div
+          class="bordered"
+          name="contactDetails"
+          formGroupName="contactDetails"
+          *ngIf="isValid('personal.fullName')"
+        >
+          <label>Address</label>
+          <input type="text" formControlName="address" class="form-control" />
+          <div class="error" *ngIf="!isValid('contactDetails.address')">
+            Address must be at least 2 characters long.
+          </div>
+          <label>City</label>
+          <input type="text" formControlName="city" class="form-control" />
+        </div>
+        <div
+          formGroupName="loginDetails"
+          class="bordered"
+          *ngIf="
+            isValid('personal.fullName') && isValid('contactDetails.address')
+          "
+        >
           <label>Email</label>
           <input
             type="text"
+            name="email"
             formControlName="email"
             class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
+          />
+          <label>Password</label>
+          <input
+            type="password"
+            name="password"
+            formControlName="password"
+            class="form-control"
+          />
+          <div class="error" *ngIf="!isValid('loginDetails.password')">
+            Password must be at least 4 characters long.
+          </div>
+          <label>Confirm Password</label>
+          <input
+            type="password"
+            formControlName="confirmPassword"
+            class="form-control"
           />
         </div>
-        <div class="form-row">
-          <div class="form-group col">
-            <label>Password</label>
-            <input
-              type="password"
-              formControlName="password"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-            />
-          </div>
-          <div class="form-group col">
-            <label>Confirm Password</label>
-            <input
-              type="password"
-              formControlName="confirmPassword"
-              class="form-control"
-              [ngClass]="{
-                'is-invalid': submitted && f.confirmPassword.errors
-              }"
-            />
-          </div>
-        </div>
-        <div class="form-group form-check">
+        <div
+          class="panel form-group form-check"
+          *ngIf="
+            isValid('personal.fullName') &&
+            isValid('contactDetails.address') &&
+            isValid('loginDetails.password')
+          "
+        >
+          <label for="acceptTerms" class="form-check-label"
+            >Accept Terms & Conditions</label
+          >
           <input
             type="checkbox"
             formControlName="acceptTerms"
             id="acceptTerms"
             class="form-check-input"
-            [ngClass]="{ 'is-invalid': submitted && f.acceptTerms.errors }"
           />
-          <label for="acceptTerms" class="form-check-label"
-            >Accept Terms & Conditions</label
-          >
-          <div
-            *ngIf="submitted && f.acceptTerms.errors"
-            class="invalid-feedback"
-          >
+          <div class="error" *ngIf="!isValid('acceptTerms')">
             Accept Ts & Cs is required
           </div>
         </div>
         <div class="text-center">
-          <button class="btn btn-primary mr-1">Register</button>
+          <button
+            class="btn btn-primary mr-1"
+            [disabled]="
+              !(
+                isValid('personal.fullName') &&
+                isValid('contactDetails.address') &&
+                isValid('loginDetails.password') &&
+                isValid('acceptTerms')
+              )
+            "
+            type="submit"
+          >
+            Register
+          </button>
           <button class="btn btn-secondary" type="reset" (click)="onReset()">
             Clear
           </button>
