--- a/Edureka/Forms/src/styles.css
+++ b/Edureka/Forms/src/styles.css
@@ -11,14 +11,16 @@
   margin-left: auto;
   margin-right: auto;
 
-  padding: 10px;
   background-color: #fff;
-
+  box-shadow: 10px 5px grey;
+}
+.dialog,
+.bordered {
   border-width: 10px;
   border-style: groove;
   border-color: lightyellow;
   border-radius: 10px;
-  box-shadow: 10px 5px grey;
+  padding: 10px;
 }
 
 .dialog > ul > li {
@@ -145,7 +147,8 @@ nav > ul > li > a {
 .online {
   color: greenyellow;
 }
-.offline {
+.offline,
+.error {
   color: red;
 }
 
