--- a/Edureka/Validation/src/app/components/7-validation/validation.component.html
+++ b/Edureka/Validation/src/app/components/7-validation/validation.component.html
@@ -1,7 +1,5 @@
 <div class="dialog">
-  <h2 class="centered">
-    Welcome to your forms, we wish you a good shopping experience !!
-  </h2>
+  <h2 class="centered">Welcome to Validation ( of forms ) !!</h2>
 </div>
 <div class="panel panel-primary">
   <div class="panel-heading">
