--- a/Edureka/Validation/src/app/components/7-validation/reactive-validation/reactive-validation.component.html
+++ b/Edureka/Validation/src/app/components/7-validation/reactive-validation/reactive-validation.component.html
@@ -4,16 +4,26 @@
     <div class="card-body">
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="bordered" name="personal" formGroupName="personal">
-          <label>Username</label>
+          <label [ngClass]="{ 'ng-valid': isValid('personal.userName') }"
+            >Username</label
+          >
           <input
             type="text"
             name="userName"
             formControlName="userName"
             class="form-control"
           />
-          <label>Full Name</label>
+          <div class="error" *ngIf="isInValid('personal.userName', 'required')">
+            Field is reqired !
+          </div>
+          <label [ngClass]="{ 'ng-valid': isValid('personal.fullName') }"
+            >Full Name</label
+          >
           <input type="text" formControlName="fullName" class="form-control" />
-          <div class="error" *ngIf="!isValid('personal.fullName')">
+          <div class="error" *ngIf="isInValid('personal.fullName', 'required')">
+            Field is reqired !
+          </div>
+          <div class="error" *ngIf="isInValid('personal.fullName', 'min')">
             Name must be at least 4 characters long.
           </div>
         </div>
@@ -21,46 +31,114 @@
           class="bordered"
           name="contactDetails"
           formGroupName="contactDetails"
-          *ngIf="isValid('personal.fullName')"
+          *ngIf="isValid('personal')"
         >
-          <label>Address</label>
+          <label [ngClass]="{ 'ng-valid': isValid('contactDetails.address') }"
+            >Address</label
+          >
           <input type="text" formControlName="address" class="form-control" />
-          <div class="error" *ngIf="!isValid('contactDetails.address')">
+          <div
+            class="error"
+            *ngIf="isInValid('contactDetails.address', 'required')"
+          >
+            Field is reqired !
+          </div>
+          <div class="error" *ngIf="isInValid('contactDetails.address', 'min')">
             Address must be at least 2 characters long.
           </div>
-          <label>City</label>
+          <label [ngClass]="{ 'ng-valid': isValid('contactDetails.telephone') }"
+            >Telephone</label
+          >
+          <input type="text" formControlName="telephone" class="form-control" />
+          <div
+            class="error"
+            *ngIf="isInValid('contactDetails.telephone', 'required')"
+          >
+            Field is reqired !
+          </div>
+          <div
+            class="error"
+            *ngIf="isInValid('contactDetails.telephone', 'min')"
+          >
+            Telephone nr must be at least 10 digits long.
+          </div>
+          <div
+            class="error"
+            *ngIf="isInValid('contactDetails.telephone', 'pattern')"
+          >
+            DIGITS ONLY !!
+          </div>
+          <label [ngClass]="{ 'ng-valid': isValid('city') }">City</label>
           <input type="text" formControlName="city" class="form-control" />
+          <div
+            class="error"
+            *ngIf="isInValid('contactDetails.city', 'required')"
+          >
+            Field is reqired !
+          </div>
         </div>
         <div
           formGroupName="loginDetails"
           class="bordered"
-          *ngIf="
-            isValid('personal.fullName') && isValid('contactDetails.address')
-          "
+          *ngIf="isValid('contactDetails')"
         >
-          <label>Email</label>
+          <label [ngClass]="{ 'ng-valid': isValid('loginDetails.email') }"
+            >Email</label
+          >
           <input
             type="text"
             name="email"
             formControlName="email"
             class="form-control"
           />
-          <label>Password</label>
+          <div
+            class="error"
+            *ngIf="isInValid('loginDetails.email', 'required')"
+          >
+            Field is reqired !
+          </div>
+          <div class="error" *ngIf="isInValid('loginDetails.email', 'email')">
+            Email format must follow standard, like 'tttt@tttt.tt' !
+          </div>
+          <label [ngClass]="{ 'ng-valid': isValid('loginDetails.password') }"
+            >Password</label
+          >
           <input
             type="password"
             name="password"
             formControlName="password"
             class="form-control"
           />
-          <div class="error" *ngIf="!isValid('loginDetails.password')">
+          <div
+            class="error"
+            *ngIf="isInValid('loginDetails.password', 'required')"
+          >
+            Field is reqired !
+          </div>
+          <div class="error" *ngIf="!isValid('loginDetails.password', 'min')">
             Password must be at least 4 characters long.
           </div>
-          <label>Confirm Password</label>
+          <label
+            [ngClass]="{ 'ng-valid': isValid('loginDetails.confirmPassword') }"
+            >Confirm Password</label
+          >
           <input
             type="password"
             formControlName="confirmPassword"
             class="form-control"
           />
+          <div
+            class="error"
+            *ngIf="isInValid('loginDetails.confirmPassword', 'required')"
+          >
+            Field is reqired !
+          </div>
+          <div
+            class="error"
+            *ngIf="isInValid('loginDetails.confirmPassword', 'validateEqual')"
+          >
+            Password mismatch !
+          </div>
         </div>
         <div
           class="panel form-group form-check"
@@ -70,15 +148,27 @@
             isValid('loginDetails.password')
           "
         >
-          <label for="acceptTerms" class="form-check-label"
+          <label
+            [ngClass]="{ 'ng-valid': isValid('acceptTerms') }"
+            for="acceptTerms"
+            class="form-check-label"
             >Accept Terms & Conditions</label
           >
           <input
             type="checkbox"
+            name="acceptTerms"
             formControlName="acceptTerms"
             id="acceptTerms"
             class="form-check-input"
           />
+          <div
+            class="error"
+            *ngIf="
+              isVisible('acceptTerms') && !isValid('acceptTerms', 'required')
+            "
+          >
+            Field is reqired !
+          </div>
           <div class="error" *ngIf="!isValid('acceptTerms')">
             Accept Ts & Cs is required
           </div>
