--- a/Edureka/Authentication/src/app/components/6-forms/template-forms/template-forms.component.html
+++ b/Edureka/Authentication/src/app/components/6-forms/template-forms/template-forms.component.html
@@ -14,11 +14,11 @@
             <label>Full Name</label>
             <input
               type="text"
-              name="fullName"
+              name="firstName"
               class="form-control"
-              [(ngModel)]="model.fullName"
-              #fullName="ngModel"
-              [ngClass]="{ 'is-invalid': f.submitted && fullName.invalid }"
+              [(ngModel)]="model.firstName"
+              #firstName="ngModel"
+              [ngClass]="{ 'is-invalid': f.submitted && firstName.invalid }"
             />
           </div>
         </div>
