--- a/Edureka/Authentication/src/app/components/home/home.component.html
+++ b/Edureka/Authentication/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
   <div class="content">
     <div class="dialog">
       <div *ngIf="selectedUser.id >= 0">
-        You selected user {{ selectedUser.fullName }}(
+        You selected user {{ selectedUser.firstName }}(
         <span class="linkLookAlike" (click)="showDetails(selectedUser.id)">
           details </span
         >)
@@ -21,7 +21,7 @@
           *ngFor="let user of knownUsers"
         >
           <label (click)="selectUser(user.id)" class="linkLookAlike">
-            {{ user.fullName }}
+            {{ user.firstName }}
           </label>
         </li>
       </ul>
