--- a/Edureka/Authentication/src/app/components/home/user-details/user-details.component.html
+++ b/Edureka/Authentication/src/app/components/home/user-details/user-details.component.html
@@ -29,7 +29,7 @@
         </td>
 
         <td>
-          <label id="salary">{{ selectedUser.username }}</label>
+          <label id="salary">{{ selectedUser.auth?.username }}</label>
         </td>
       </tr>
     </tbody>
